test: adicionando testes para a os dados passados na criacao da classe Category